# openspace_taurians

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json
.github/workflows/: ci.yml  release.yml
app/: Cargo.toml  tauri.conf.json
app/icons/: icon.icns
app/src/: main.rs
backend/tauri-app/: Cargo.toml  tauri.conf.json
backend/tauri-app/src/: main.rs
capabilities/: chat.json  editor.json  git.json  global-shortcut.json  settings.json  terminal.json
cores/ai-providers/: Cargo.toml
cores/ai-providers/src/: adapter.rs  config.rs  encryption.rs  lib.rs  storage.rs
cores/feature-registry/: Cargo.toml
cores/feature-registry/src/: lib.rs
cores/git-lens/: Cargo.toml
cores/git-lens/src/: lib.rs
cores/stream-utils/: Cargo.toml
cores/stream-utils/src/: channel.rs  lib.rs  stream.rs
cores/terminal-pty/: Cargo.toml
cores/terminal-pty/src/: lib.rs
cores/tree-sitter-lsp/: Cargo.toml
cores/tree-sitter-lsp/src/: lib.rs
docs/agents/: domain.md  triage-labels.md
interfaces/: package-lock.json  package.json  vitest.setup.ts
interfaces/__tests__/: chat.test.ts  chatStore.test.ts  inlineCompletion.test.ts  inlineCompletionStore.test.ts  provider.test.ts  shortcuts.test.tsx  stream.test.ts  testConnection.test.tsx  themeStore.test.ts  workspaceStore.test.ts
interfaces/app/: globals.css  layout.tsx  page.tsx
interfaces/app/settings/: page.tsx
interfaces/app/workspace/: layout.tsx  page.tsx
interfaces/app/workspace/[featureName]/: FeaturePanelContent.tsx  page.tsx
interfaces/components/: CommandPalette.tsx  Panel.tsx  Sidebar.tsx  ThemeToggle.tsx  WorkspaceLayout.tsx  WorkspaceShortcuts.tsx
interfaces/components/chat/: ChatPanel.tsx
interfaces/components/settings/: ProviderForm.tsx  ProviderList.tsx
interfaces/contexts/: ShortcutContext.tsx
interfaces/hooks/: useRegisterShortcut.ts
interfaces/i18n/: request.ts
interfaces/lib/: contracts.ts  monacoTheme.ts  shortcuts.ts  stream.ts  xtermTheme.ts
interfaces/lib/api/: providers.ts
interfaces/lib/types/: provider.ts
interfaces/messages/: en.json
interfaces/stores/: chatStore.ts  inlineCompletionStore.ts  themeStore.ts  workspaceStore.ts
