[package]
name = "openspace-tauri"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
feature-registry = { path = "../cores/feature-registry" }
tauri = { version = "2", features = [] }
tauri-plugin-global-shortcut = "2"
serde = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
tauri-build = { version = "2", features = [] }
