[package]
name = "ai-providers"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
aes-gcm = "0.10"
rand = "0.8"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
