[package]
name = "stream-utils"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tauri = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
